# hwloc

./: NEWS  configure.ac
config/: hwloc.m4  hwloc_components.m4  hwloc_internal.m4
contrib/: hwloc-valgrind.supp
doc/: Makefile.am  hwloc.doxy
include/: Makefile.am  hwloc.h
include/hwloc/: backend.h  cuda.h  cudart.h  gl.h  helper.h  rename.h  topology.h
include/private/: backend.h  components.h  misc.h  private.h  topology.h  xml.h
src/: Makefile.am  backend.c  components.c  gl.c  hwloc.dtd  misc.c  topology-aix.c  topology-cuda.c  topology-custom.c  topology-darwin.c  topology-fake.c  topology-freebsd.c  topology-gl.c  topology-hpux.c  topology-json.c  topology-libpci.c  topology-linux.c  topology-noos.c  topology-osf.c  topology-solaris.c  topology-synthetic.c  topology-windows.c  topology-x86.c  topology-xml-libxml.c  topology-xml-nolibxml.c  topology-xml.c  topology.c  traversal.c
src/backends/: Makefile  Makefile.am  Makefile.in  hwloc_backends_base_topology-freebsd.c  hwloc_backends_base_topology-linux.c  hwloc_backends_global_topology-synthetic.c  hwloc_backends_io_topology-libpci.c
tests/: Makefile.am  gl.c  hwloc_backends.c  hwloc_backends_new.c  hwloc_synthetic.c  hwloc_valarray.c  jsonbuffer.c
tests/linux/: 16amd64-8n2c-cpusets.json.options  16amd64-8n2c-cpusets.json.output  32amd64-4s2n4c-cgroup.xml.output  Makefile.am
tests/rename/: Makefile.am
tests/xml/: 32em64t-2n8c2t-pci-noio.xml  32em64t-2n8c2t-pci-normalio.xml  32em64t-2n8c2t-pci-wholeio.xml  8em64t-2mi2ma2c.xml
utils/: Makefile.am  hwloc-annotate.1in  hwloc-annotate.c  hwloc-ps.c  lstopo-draw.c  lstopo-json.c  lstopo-xml.c  lstopo.c  lstopo.h  misc.h  test-fake-plugin.sh.in  test-hwloc-annotate.output  test-hwloc-annotate.sh.in  test-hwloc-assembler.sh.in  test-hwloc-calc.sh.in  test-hwloc-distances.sh.in  test-hwloc-distrib.sh.in
